--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
   "dependencies": {
     "@clerk/nextjs": "^6.28.0",
     "@clerk/themes": "^2.4.4",
+    "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "class-variance-authority": "^0.7.1",
     "drizzle-orm": "^0.44.4",
+    "lucide-react": "^0.539.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -27,7 +39,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
